--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,6 @@
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.14.1"
   }
 }
